Remember skips.